--- a/app.free.json
+++ b/app.free.json
@@ -1,17 +1,13 @@
-{
+ {
   "expo": {
-    "name": "IOU Tracker",
+    "name": "IOU Tracker Free",
     "slug": "iou-tracker-free",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "ioutracker",
+    "scheme": "ioutrackerfree",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
-    "ios": {
-      "supportsTablet": true,
-      "bundleIdentifier": "com.anonymous.ioutracker"
-    },
     "android": {
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
@@ -28,10 +24,9 @@
         "android.permission.READ_MEDIA_IMAGES",
         "android.permission.READ_MEDIA_VIDEO",
         "android.permission.READ_MEDIA_AUDIO",
-        "android.permission.READ_CONTACTS",
         "android.permission.MANAGE_EXTERNAL_STORAGE"
       ],
-      "package": "com.anonymous.ioutracker",
+      "package": "com.anonymous.ioutracker.free",
       "versionCode": 1
     },
     "web": {
@@ -49,7 +44,7 @@
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff",
-          "splashScreenId": "splash"
+          "splashScreenId": "splash-free"
         }
       ],
       "expo-local-authentication",
@@ -70,7 +65,6 @@
         "react-native-google-mobile-ads",
         {
           "android_app_id": "ca-app-pub-5832333342375286~8602969898",
-          "ios_app_id": "ca-app-pub-5832333342375286~8602969898",
           "user_tracking_usage_description": "This identifier will be used to deliver personalized ads to you."
         }
       ]
