--- a/app.original.json
+++ b/app.original.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "IOU Tracker",
-    "slug": "iou-tracker-free",
+    "name": "iou-tracker",
+    "slug": "iou-tracker",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -9,8 +9,7 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true,
-      "bundleIdentifier": "com.anonymous.ioutracker"
+      "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
@@ -27,12 +26,12 @@
         "android.permission.READ_MEDIA_VISUAL_USER_SELECTED",
         "android.permission.READ_MEDIA_IMAGES",
         "android.permission.READ_MEDIA_VIDEO",
-        "android.permission.READ_MEDIA_AUDIO",
-        "android.permission.READ_CONTACTS",
-        "android.permission.MANAGE_EXTERNAL_STORAGE"
+        "android.permission.READ_MEDIA_AUDIO"
       ],
       "package": "com.anonymous.ioutracker",
-      "versionCode": 1
+      "versionCode": 1,
+      "enableProguardInReleaseBuilds": true,
+      "proguardFiles": ["proguard-android.txt", "proguard-rules.pro"]
     },
     "web": {
       "output": "static",
@@ -49,43 +48,20 @@
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff",
-          "splashScreenId": "splash"
-        }
-      ],
-      "expo-local-authentication",
-      [
-        "expo-notifications",
-        {
-          "icon": "./assets/images/icon.png",
-          "color": "#ffffff"
-        }
-      ],
-      [
-        "expo-contacts",
-        {
-          "contactsPermission": "Allow IOU Tracker to access your contacts to make adding people easier."
-        }
-      ],
-      [
-        "react-native-google-mobile-ads",
-        {
-          "android_app_id": "ca-app-pub-5832333342375286~8602969898",
-          "ios_app_id": "ca-app-pub-5832333342375286~8602969898",
-          "user_tracking_usage_description": "This identifier will be used to deliver personalized ads to you."
+          "dark": {
+            "backgroundColor": "#000000"
+          }
         }
       ]
     ],
     "experiments": {
-      "typedRoutes": true
+      "typedRoutes": true,
+      "reactCompiler": true
     },
     "extra": {
-      "isProVersion": false,
-      "appVariant": "free",
-      "router": {
-        "origin": false
-      },
+      "router": {},
       "eas": {
-        "projectId": "7c838bf5-0e9f-437b-94e1-070591356e6b"
+        "projectId": "5ab31db1-e6ef-4df1-ae5b-b9f6bfde7535"
       }
     }
   }
